--- a/notebook1.rmd
+++ b/notebook1.rmd
@@ -16,4 +16,4 @@ kable(x = data.frame(dimension=c("1d","2d","nd"),Homogeneous=c("Atomic vector","
 library(devtools)
 install_github("ropensci/plotly")
 ```
-plotly的用户名为**luojie2211**，API Key为**g96afunebs**。
+plotly的用户名为**luojie2211**，API Key为**g96afunebs**，如果遗忘，在登录状态下可以查看[该网页](https://plot.ly/settings/api)。
